--- a/views/questionPage.pug
+++ b/views/questionPage.pug
@@ -32,6 +32,7 @@ html(lang='en')
               div
                 div(class="author" onclick=`window.location.href='/viewProfile?id=${ownerId.slice(1)}'`)=username
                 div(class="time" time=`${receivedAt}`)
+            div(class="edit-q-btn" onclick=`makeQuestionEditable('${questionDetails.id}')`) edit
         div(class="question-body")
           div(class="question-body-c")!=body
             div(class="tags" style="margin-left:0")
