--- a/views/comments.pug
+++ b/views/comments.pug
@@ -1,13 +1,14 @@
 mixin getComments(comments)
   span Comments 
-  each comment in comments
-    div(class="comment" id=`${comment.id}`)=comment.comment
+  each Comment in comments
+    -const {id,ownerId,responseId,comment,type,receivedAt,username} = Comment
+    div(class="comment" id=`${id}`)=comment
     div(class="flex-row border")
       div(class="edit-btns")
-        if(comment.ownerId == `u${userId}`)
-          div(class="edit-btn" onclick=`makeCommentEditable(this,'${comment.id}')`) edit
-          div(class="cancel-btn hide" onclick=`makeCommentUneditable(this,'${comment.id}')`) cancel
-          div(class="save-btn hide" onclick=`updateComment(this, '${comment.id}')`) save
+        if(userInfo && userInfo.id==ownerId)
+          div(class="edit-btn" onclick=`makeCommentEditable(this,'${id}')`) edit
+          div(class="cancel-btn hide" onclick=`makeCommentUneditable(this,'${id}')`) cancel
+          div(class="save-btn hide" onclick=`updateComment('${id}', '${qd.id}')`) save
       div(class="c-author")
-        span(onclick=`window.location.href='/viewProfile?id=${comment.ownerId.slice(1)}'`)=comment.username
-        span(class='a-comment-time' time=`${comment.receivedAt}`) ,&nbsp;
+        span(onclick=`window.location.href='/viewProfile?id=${ownerId}'`)=username
+        span(class='a-comment-time' time=`${receivedAt}`) ,&nbsp;
