--- a/views/postAnswer.pug
+++ b/views/postAnswer.pug
@@ -8,7 +8,7 @@ mixin getQuestionId(qId)
       div(id='toolbar')
       div(id='editor')
       div(id="formFooter" class="edit-answer-btns")
-        button(onclick=`postAnswer(${userId},'${questionDetails.id}',this)`) Post Answer
+        button(onclick=`postAnswer('${userInfo && userInfo.id}','${qId}',this)`) Post Answer
         button(class="cancel-btn hide" onclick=`makeAnswerUneditable('${qId}')`) Cancel
         button(class="save-btn hide" onclick=`updateAnswer('${qId}')`) Save
         div(class="popUp hide")
