--- a/views/postAnswer.pug
+++ b/views/postAnswer.pug
@@ -11,4 +11,4 @@ mixin getQuestionId(qId)
         button(onclick=`postAnswer('${userInfo && userInfo.id}','${qId}',this)`) Post Answer
         button(class="cancel-btn hide" onclick=`makeAnswerUneditable('${qId}')`) Cancel
         button(class="save-btn hide" onclick=`updateAnswer('${qId}')`) Save
-        div(class="popUp hide")
+        div(class="popUp hide") abcd
