--- a/views/postComment.pug
+++ b/views/postComment.pug
@@ -1,11 +1,10 @@
-style
-  include ../public/css/postAnswer.css
-  include ../public/css/postComment.css
-mixin getId(resId,type)
-  p(class="add-comment" onclick=`toggleCommentBox('.form-${resId}-${type}')`) add comment
-  form(class=`form-${resId}-${type} hide` action=`/postComment/${qd.id}/${type?'questions':'answers'}` method="POST" onSubmit=`return checkForm(this)`)
-    input(type="number", name="responseId" value=`${resId}` style="display: none")
-    input(name="comment", type="text",placeholder="Enter comment..." minlength='10' maxlength='180' required)
-    div(id="formFooter")
-      button Post comment
-      div(class="popUp hide") *please Login before submit
+mixin comments_editor(resId,table)
+  -const mainId= `m${resId}_${table}`
+  .add-comment(onclick=userInfo?"toggleCommentBox(this)":"togglePopUp(this.lastChild,'hide')")
+    span add comment
+    span.popUp.hide &nbsp;&nbsp;*please login before add a comment
+  .hide.new_comment_box(id=mainId)
+    input(type="text",placeholder="Enter comment...")
+    .formFooter
+      button(onclick=`postComment('${mainId}','${qd.id}','${resId}','${table}')`) Post comment
+      .popUp.hide(id=id=mainId+'p')
