--- a/views/questionPage.pug
+++ b/views/questionPage.pug
@@ -40,12 +40,12 @@ html(lang='en')
               each tag in tags
                 div(class="tag q-tag")=tag.title
           div(class="vote-container")
-            div(class="up-arrow" onclick=`updateVote('/upVote','answers','${qd.id}',this)`)
+            div(class="up-arrow" onclick=`updateVote('/upVote','questions','${qd.id}',this)`)
             div(class="countName votes")
               div(class="count")
                 span=vote||0
                 div(class="ansCount") votes
-            div(class="down-arrow" onclick=`updateVote('/downVote','answers','${qd.id}',this)`)
+            div(class="down-arrow" onclick=`updateVote('/downVote','questions','${qd.id}',this)`)
         div(class="comments") 
           span Comments
           include comments
