--- a/public/css/postComment.css
+++ b/public/css/postComment.css
@@ -26,7 +26,7 @@
   font-family: Helvetica, sans-serif;
 }
 .add-comment {
-  margin: 1.5% 3%;
+  margin: 1vh 2vw;
   cursor: pointer;
   color: #f48024;
 }
