--- a/views/postComment.pug
+++ b/views/postComment.pug
@@ -1,6 +1,6 @@
 mixin comments_editor(resId,table)
   -const mainId= `m${resId}_${table}`
-  .add-comment(onclick=userInfo?"toggleCommentBox(this)":"togglePopUp(this.lastChild,'hide')")
+  .add-comment(onclick=`toggleBox(this, ${userInfo && userInfo.id})`)
     span add comment
     span.popUp.hide &nbsp;&nbsp;*please login before add a comment
   .hide.new_comment_box(id=mainId)
