--- a/views/profilePage.pug
+++ b/views/profilePage.pug
@@ -10,20 +10,20 @@ html(lang='en')
   body( onload=`highlightMenuItem('/viewProfile?id=${details && details.id}')`)
     include titleBar
     include menuBar
-    div(class="container")
+    .container
       if(!details) 
         div no user found
       else  
-        div(class="topBox")
-          div(class="bigAvatar")
+        .topBox
+          .bigAvatar
             img(src=`${details.avatar}`, alt="alt")
-          div(class="details")
-            div(class="username")=details.username
-            div(class="label") Name: 
+          .details
+            .username=details.username
+            .label Name: 
               span=details.name
-            div(class="label") Email: 
+            .label Email: 
               span=details.email
-            div(class="label") Company: 
+            .label Company: 
               span=details.company
             h2 Bio
-            div(class="bio")=details.bio
+            .bio=details.bio
