--- a/views/comments.pug
+++ b/views/comments.pug
@@ -2,13 +2,13 @@ mixin getComments(comments)
   each Comment in comments
     -const {id,ownerId,responseId,comment,type,receivedAt,username} = Comment
     div(id=`c${id}`)
-      div(class="comment")=comment
-      div(class="flex-row border")
-        div(class="edit-btns")
+      .comment=comment
+      .flex-row.border
+        .edit-btns
           if(userInfo && userInfo.id==ownerId)
-            div(class="edit-btn" onclick=`makeCommentEditable(this,'c${id}')`) edit
-            div(class="cancel-btn hide" onclick=`makeCommentUneditable(this,'c${id}')`) cancel
-            div(class="save-btn hide" onclick=`updateComment('${id}')`) save
-        div(class="c-author")
+            .edit-btn(onclick=`makeCommentEditable(this,'c${id}')`) edit
+            .cancel-btn.hide(onclick=`makeCommentUneditable(this,'c${id}')`) cancel
+            .save-btn.hide(onclick=`updateComment('${id}')`) save
+        .c-author
           span(onclick=`window.location.href='/viewProfile?id=${ownerId}'`)=username
           span(class='a-comment-time' time=`${receivedAt}`) ,&nbsp;
