|#28|Santhosh/Ragini| changed all including css in server to links
modified all the element classes in css to prefix by dot

--- a/views/comments.pug
+++ b/views/comments.pug
@@ -11,4 +11,4 @@ mixin getComments(comments)
             .save-btn.hide(onclick=`updateComment('${id}')`) save
         .c-author
           span(onclick=`window.location.href='/viewProfile?id=${ownerId}'`)=username
-          span(class='a-comment-time' time=`${receivedAt}`) ,&nbsp;
+          span.a-comment-time(time=`${receivedAt}`) ,&nbsp;
