--- a/views/loginPage.pug
+++ b/views/loginPage.pug
@@ -3,8 +3,7 @@ html(lang='en')
   head
     meta(charset='utf-8')
     title Login Page
-    style
-      include ../public/css/login.css
+    link(rel="stylesheet", href="/css/login.css")
   body
     #container
       .quote Inquire helps you to learn and share your 
