--- a/views/profilePage.pug
+++ b/views/profilePage.pug
@@ -3,9 +3,8 @@ html(lang='en')
   head
     meta(charset='utf-8')
     title home page
-    style
-      include ../public/css/home.css
-      include ../public/css/profilePage.css
+    link(rel="stylesheet", href="/css/home.css")
+    link(rel="stylesheet", href="/css/profilePage.css")
     script(src="/js/home.js")
   body( onload=`highlightMenuItem('/viewProfile?id=${details && details.id}')`)
     include titleBar
