--- a/views/yourQuestions.pug
+++ b/views/yourQuestions.pug
@@ -3,8 +3,7 @@ html(lang='en')
   head
     meta(charset='utf-8')
     title home page
-    style
-      include ../public/css/home.css
+    link(rel="stylesheet", href="/css/home.css")
     script(src="../js/home.js")
     script(src="../js/renderingDates.js")
   body(onload=`main(${questions.length})`)
